# El_Secreto_de_la_Mansion_Oscura

./: .gitignore  README.md  game.spec  generate_docs.py  main.py  pyproject.toml  requirements.txt
docs/: README.md
docs/source/: conf.py  game.rst  index.rst  modules.rst  ui.rst  utils.rst
src/game/: game.py  game_constants.py  game_state.py
src/ui/: button.py
src/utils/: logger.py  path_manager.py  resource_manager.py
tests/: test_game.py  test_resource_manager.py
