[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "el_secreto_de_la_mansion_oscura"
version = "1.0.0"
description = "Un juego de misterio y deducción desarrollado en Python."
authors = [
    { name = "CodeWithBotina", email = "CodeWithBotina.team@outlook.com" }
]
dependencies = [
    "pygame==2.6.1",
    "z3-solver==4.12.3.0",
    "importlib-resources>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "black==24.1.0",
    "flake8==6.1.0",
    "isort==5.12.0",
    "mypy==1.7.0",
    "pylint==3.0.2",
]
test = [
    "pytest==7.4.3",
    "pytest-cov==4.1.0",
    "pytest-mock==3.12.0",
    "pytest-xdist==3.3.1",
    "coverage==7.3.2",
    "hypothesis==6.86.0",
    "Faker==19.6.2",
]
docs = [
    "sphinx==7.1.2",
    "sphinx-rtd-theme==1.3.0",
    "myst-parser==2.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]